--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "@types/nodemailer": "^6.4.17",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "nodemailer": "^6.10.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
